# docker-xdg-open

./: .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: devshell.nix  module.nix  package.nix
src/: CMakeLists.txt  client.c  networking.c  networking.h  sender.c  server.c
